# FHE_test

./: .gitignore  CMakeLists.txt  client.cpp  debug_test.sh  helib_test.cpp  openfhe_test.cpp  server.cpp
afl/: master.sh  run_fuzz.sh
archive/crash/openfhe_bgv_crash/: ringDim  rotationKey
archive/crash/openfhe_ckks_crash/: id:000002,sig:06,src:000000+000019,time:24541325,execs:793,op:libopenfhe_ckks_proto,pos:0  id:000029,sig:06,src:000000+000002,time:17767927,execs:2203,op:libcustom_protobuf_mu,pos:0  id:000033,sig:11,src:000000+000106,time:24384024,execs:2928,op:libcustom_protobuf_mu,pos:0  id:000036,sig:06,src:000000+000002,time:26811255,execs:3242,op:libcustom_protobuf_mu,pos:0
archive/in/openfhe_bgv/1/: 0.txt  1.txt  2.txt  3.txt
client/: CMakeLists.txt  client.cpp
data/: data.txt
include/: HElib_setting.h  OpenFHE_setting.h  general_setting.h  openfhe_test.h  util.h  util_check.h  util_cout.h  util_serial.h  util_socket.h  util_string.h
proto/: openfhe_bgv.pb.cc  openfhe_bgv.pb.h  openfhe_bgv_parser.h  openfhe_ckks.pb.cc  openfhe_ckks.pb.h  openfhe_ckks.proto  openfhe_ckks_parser.h  proto_setting.h  protobuf_parser.h
server/: CMakeLists.txt  server.cpp
